[gd_scene load_steps=39 format=3 uid="uid://y8aw8cq5xxy"]

[ext_resource type="Script" uid="uid://b0xxqcbhmj7ht" path="res://Scripts/player_main.gd" id="1_dn4j3"]
[ext_resource type="Texture2D" uid="uid://bmdajnld83nt3" path="res://Characters/Player/Walk.png" id="1_u8k5t"]
[ext_resource type="Texture2D" uid="uid://b74l6ew15283e" path="res://Characters/Player/Idle.png" id="2_dn4j3"]
[ext_resource type="Texture2D" uid="uid://dwfqyw4xg2if4" path="res://Characters/Player/Stab.png" id="3_e2uto"]
[ext_resource type="PackedScene" uid="uid://7y3rt4k4lcqi" path="res://Scenes/heart_bar.tscn" id="4_encxe"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_noye3"]
animation = &"attack_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_koiyj"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kivnl"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5ym0d"]
animation = &"attack_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_uto3c"]
blend_point_0/node = SubResource("AnimationNodeAnimation_noye3")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_koiyj")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_kivnl")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_5ym0d")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_e2uto"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kfthp"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_encxe"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3tsci"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0bobp"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_01ocy"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kfthp")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_encxe")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_3tsci")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_0bobp")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7m8ro"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_niw6a"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sqc4o"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nfgwa"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_oixfn"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7m8ro")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_niw6a")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_sqc4o")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_nfgwa")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dn4j3"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_uto3c")
states/Attack/position = Vector2(710, 92)
states/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_e2uto")
states/BlendSpace2D/position = Vector2(748, 180)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_01ocy")
states/Idle/position = Vector2(400, 102)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_oixfn")
states/Walk/position = Vector2(560, 113)

[sub_resource type="Animation" id="Animation_yp5jh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("idle:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("walk:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attack:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_w64td"]
resource_name = "idle_down"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("idle:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_kfthp"]
resource_name = "idle_left"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("idle:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_phhv8"]
resource_name = "idle_right"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("idle:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2)]
}

[sub_resource type="Animation" id="Animation_30ijx"]
resource_name = "idle_up"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("idle:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_oh1g1"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_2bi3a"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_o5bsy"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_65pas"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_ue88o"]
resource_name = "attack_left"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.15, 0.3, 0.45, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_0jnqq"]
resource_name = "attack_right"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.15, 0.3, 0.45, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_sq3ud"]
resource_name = "attack_up"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.15, 0.3, 0.45, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_x2upu"]
resource_name = "attack_down"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_encxe"]
_data = {
&"RESET": SubResource("Animation_yp5jh"),
&"attack_down": SubResource("Animation_x2upu"),
&"attack_left": SubResource("Animation_ue88o"),
&"attack_right": SubResource("Animation_0jnqq"),
&"attack_up": SubResource("Animation_sq3ud"),
&"idle_down": SubResource("Animation_w64td"),
&"idle_left": SubResource("Animation_kfthp"),
&"idle_right": SubResource("Animation_phhv8"),
&"idle_up": SubResource("Animation_30ijx"),
&"walk_down": SubResource("Animation_oh1g1"),
&"walk_left": SubResource("Animation_2bi3a"),
&"walk_right": SubResource("Animation_o5bsy"),
&"walk_up": SubResource("Animation_65pas")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dn4j3"]
radius = 4.1231055

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h3e6n"]
radius = 11.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animation_tree")]
texture_filter = 1
position = Vector2(325, 171)
collision_layer = 16
collision_mask = 22
script = ExtResource("1_dn4j3")
animation_tree = NodePath("AnimationTree")
metadata/_edit_group_ = true

[node name="idle" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, 0)
texture = ExtResource("2_dn4j3")
hframes = 3
vframes = 4
frame = 9
metadata/_edit_group_ = true

[node name="attack" type="Sprite2D" parent="."]
texture = ExtResource("3_e2uto")
hframes = 5
vframes = 4

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_dn4j3")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(-0.0026350617, 0.9806763)
parameters/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(-0.003952563, 0.98275864)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_encxe")
}

[node name="walk" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_u8k5t")
hframes = 5
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_dn4j3")

[node name="Camera2D" type="Camera2D" parent="."]
texture_filter = 1
zoom = Vector2(4, 4)
limit_left = 4
limit_top = -2
limit_right = 1152
limit_bottom = 648
position_smoothing_enabled = true

[node name="heart_bar" parent="." instance=ExtResource("4_encxe")]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="playerHitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerHitbox"]
shape = SubResource("CapsuleShape2D_h3e6n")

[node name="attack_cooldown" type="Timer" parent="playerHitbox"]
wait_time = 1.5

[node name="deal_attack_timer" type="Timer" parent="."]

[connection signal="body_entered" from="playerHitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="playerHitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="playerHitbox/attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
